migrate Oolang to Java