@@ -1,15 +1,10 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode.Strict
-import org.jetbrains.kotlin.gradle.dsl.KotlinVersion.KOTLIN_2_3
 import kotlin.jvm.optionals.getOrNull
 
 plugins {
-    kotlin("jvm")
-    id("org.jetbrains.dokka-javadoc")
     `java-library`
     `maven-publish`
-    id("org.jetbrains.kotlinx.kover")
 }
 
 val versionCatalog: VersionCatalog = extensions.getByType<VersionCatalogsExtension>().named("libs")
@@ -19,27 +14,6 @@ fun catalogVersion(lib: String) =
 
 val javaVersion = catalogVersion("java").toInt()
 
-kotlin {
-    // for all targets: main / test / testFixtures
-    compilerOptions {
-        languageVersion.set(KOTLIN_2_3)
-        apiVersion.set(KOTLIN_2_3)
-        explicitApi = Strict
-    }
-    // only for the main target
-    target {
-        val main by compilations.getting {
-            compileTaskProvider.configure {
-                compilerOptions {
-                    allWarningsAsErrors = true
-                }
-            }
-        }
-    }
-
-    jvmToolchain(javaVersion)
-}
-
 repositories {
     mavenCentral()
 }
@@ -47,27 +21,20 @@ repositories {
 dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:${catalogVersion("junit")}")
     testImplementation("org.assertj:assertj-core:${catalogVersion("assertj")}")
-    testImplementation(kotlin("test"))
+
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:${catalogVersion("junit")}")
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(javaVersion)
+    }
+
+    withSourcesJar()
+    withJavadocJar()
 }
 
 tasks {
-    withType<JavaCompile> {
-        options.encoding = Charsets.UTF_8.toString()
-        options.release = javaVersion
-
-        // replace '-' with '.' to match JPMS jigsaw module name
-        val jpmsName = project.name.replace('-', '.')
-        // this is needed because we have a separate compile step because the Java code is in 'main/java' and the Kotlin
-        // code is in 'main/kotlin'
-        options.compilerArgs.addAll(
-            listOf(
-                "--patch-module",
-                "$jpmsName=${sourceSets.main.get().output.asPath}",
-                //"--enable-preview",
-            )
-        )
-    }
-
     withType<Jar> {
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     }
@@ -91,15 +58,6 @@ tasks {
     }
 }
 
-// Generate a javadoc jar for Java and Kotlin code in jvm artifacts.
-val dokkaJavadocJar by tasks.registering(Jar::class) {
-    description = "A Javadoc JAR containing Dokka Javadoc for Java and Kotlin"
-    from(tasks.dokkaGeneratePublicationJavadoc.flatMap { it.outputDirectory })
-    archiveClassifier.set("javadoc")
-}
-
 publishing.publications.withType<MavenPublication> {
     from(components["java"])
-
-    artifact(dokkaJavadocJar)
 }
